// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar triggers search when searchInput is not empty 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="searchBar"
    >
      <div
        class="wrapper input"
      >
        <span
          class="prefix"
        >
          <i
            class="material-icons icon"
          >
            search
          </i>
        </span>
        <input
          class="input"
          id="input-text-1"
          name="input-text-1"
          placeholder="Search by content, articles and categories"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SearchBar triggers search when searchInput is not empty 2`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="searchBar"
    >
      <div
        class="wrapper input"
      >
        <span
          class="prefix"
        >
          <i
            class="material-icons icon"
          >
            search
          </i>
        </span>
        <input
          class="input"
          id="input-text-1"
          name="input-text-1"
          placeholder="Search by content, articles and categories"
          type="text"
          value="my search"
        />
        <span
          class="suffix"
        >
          <i
            class="material-icons icon clearButton"
          >
            close
          </i>
        </span>
      </div>
    </div>
  </div>
</div>
`;
